[package]
name = "based-trading"
version = "0.1.0"
edition = "2024"
description = "software to trade cryptocurrencies"
readme = "README.md"
repository = "https://github.com/IzaacMammadov/based-trading"
license = "AGPL-3.0-or-later"
keywords = ["crypto", "cryptocurrency", "trading", "finance"]
categories = ["cryptography::cryptocurrencies", "finance"]

[dev-dependencies]
clippy = "0.0.302"

[lints.rust]
absolute_paths_not_starting_with_crate = "warn"
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deprecated_safe_2024 = "warn"
deref_into_dyn_supertrait = "warn"
edition_2024_expr_fragment_specifier = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
# fuzzy_provenance_casts = "warn"  <- Lint is "unstable"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
keyword-idents = "warn"
keyword_idents_2018 = "warn"
keyword_idents_2024 = "warn"
let_underscore_drop = "warn"
linker_messages = "warn"
# lossy_provenance_casts = "warn"  <- Lint is "unstable"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_unsafe_on_extern = "warn"
# multiple_supertrait_upcastable = "warn"  <- Lint is "unstable"
# must_not_suspend = "warn"  <- Lint is "unstable"
non_ascii_idents = "warn"
# non_exhaustive_omitted_patterns = "warn  <- Lint is "unstable"
redundant_imports = "warn"
redundant_lifetimes = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns = "warn"
rust_2021_prefixes_incompatible_syntax = "warn"
rust_2021_prelude_collisions = "warn"
rust_2024_guarded_string_incompatible_syntax = "warn"
rust_2024_incompatible_pat = "warn"
rust_2024_prelude_collisions = "warn"
single_use_lifetimes = "warn"
# supertrait_item_shadowing_definition = "warn"  <- Lint is "unstable"
# supertrait_item_shadowing_usage = "warn"  <- Lint is "unstable"
tail_expr_drop_order = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
# unqualified_local_imports = "warn"  <- Lint is "unstable"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "warn"
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "warn"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"


[lints.clippy]
pedantic = "warn"
restriction = "warn"
nursery = "warn"
cargo = "warn"
blanket_clippy_restriction_lints = {level = "allow", priority = 1}
implicit_return = {level = "allow", priority = 1}
missing_inline_in_public_items = {level = "allow", priority = 1}
